force-app/main/default/objects/Client_List_Association__c/Client_List_Association__c.object-meta.xml
<CustomObject>
    <label>Client List Association</label>
    <nameField>
        <displayFormat>CLS-{000000000}</displayFormat>
        <label>CLS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client List Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>