force-app/main/default/objects/Client_List_Association__c/fields/client_label_id__c.field-meta.xml
<CustomField>
    <fullName>client_label_id__c</fullName>
    <label>client_label_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>