force-app/main/default/objects/Client_List_Association__c/fields/Client_List__c.field-meta.xml
<CustomField>
    <fullName>Client_List__c</fullName>
    <label>Client List</label>
    <referenceTo>Client_List__c</referenceTo>
    <relationshipLabel>Client List Associations</relationshipLabel>
    <relationshipName>Client_List_Associations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>