force-app/main/default/objects/Client_List_Association__c/fields/LegacyOpaClient__c.field-meta.xml
<CustomField>
    <fullName>LegacyOpaClient__c</fullName>
    <externalId>true</externalId>
    <label>LegacyOpaClient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>