force-app/main/default/objects/Client_List_Association__c/fields/LegacyOpaLabel__c.field-meta.xml
<CustomField>
    <fullName>LegacyOpaLabel__c</fullName>
    <externalId>true</externalId>
    <label>LegacyOpaLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>